# robokit-atom

./: .gitignore  README.md  aruco_detect.launch  hsv_reader.py  module.py  vision.py  vision_test.py
src/competitions/launch/: basketball_webots.launch  sprint.launch
src/competitions/nodes/: \  archery_node.py  basketball_node.py  jump_node.py  sprint_node.py
src/core/: CMakeLists.txt  package.xml
src/core/config/: basketcase_config.json  camera_info_webots.yaml  motion_config_test.json  servo_config.json  walk_config.json
src/core/launch/: core_webots.launch
src/core/nodes/: .test_walk_client.py.swp  servo_control.py  test_walk_client.py  vision_node_dev.py  walk_motion_node.py  walk_motion_node_dev.py  yaml_to_ros.py
src/core/srv/: ServoService.srv
src/feature/install/: .rosinstall  local_setup.sh  setup.sh
src/feature/send_message/: CMakeLists.txt  Structure.md  package.xml
src/motion/: CMakeLists.txt
src/motion/src/: Serial_arduino.py  Treshold_Utility.py  main.py  pose_designer.py  pose_designer_config.json  show_mask.py  simulator_lib_directory.txt  threshholds.py
src/robokit-atom_description/: CMakeLists.txt  package.xml
src/robokit-atom_description/gazebo/: physics.gazebo  (+1 more)
src/robokit-atom_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/robokit_webots/: CMakeLists.txt
src/robokit_webots/launch/: init.launch
src/robokit_webots/msg/: servo_command.msg
src/robokit_webots/scripts/: animation_server.py  example_servo_publisher.py  manager.py  servo_control.py  start_sensors.py
src/robokit_webots/srv/: SetSource.srv
(+182 files in other folders)
